2013-01-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Fix w clang++ 3.0: basic C-library test broke.
2012-08-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx:
 - Compile fix for clang++ 3.2.  Thanks Amy Troschinetz.
 - Fixes #253.
2012-08-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Compile fix for clang++ 3.2.  Thanks Amy Troschinetz.
 - Fixes #252.
2012-04-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, debian, Makefile.am, tools/lint, tools/release:
 - Removed obsolete debian and RPM packaging.
 - No longer check, or update, debian/changelog for releases.
 - Dropped debian directory altogether.
2012-04-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint, tools/pqxx-fulltest, tools/pre-release-check, tools/splitconfig:
 - Mark local variables in shell functions with "local."
2012-03-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/binarystring.hxx,
 include/pqxx/connection_base.hxx, include/pqxx/connection.hxx,
 include/pqxx/connectionpolicy.hxx, include/pqxx/cursor.hxx,
 include/pqxx/errorhandler.hxx, include/pqxx/except.hxx,
 include/pqxx/field.hxx, include/pqxx/internal/callgate.hxx,
 include/pqxx/internal/gates/connection-dbtransaction.hxx,
 include/pqxx/internal/gates/connection-notification_receiver.hxx,
 include/pqxx/internal/gates/connection-pipeline.hxx,
 include/pqxx/internal/gates/connection-transaction.hxx,
 include/pqxx/internal/gates/errorhandler-connection.hxx,
 include/pqxx/internal/gates/icursor_iterator-icursorstream.hxx,
 include/pqxx/internal/gates/icursorstream-icursor_iterator.hxx,
 include/pqxx/internal/gates/result-sql_cursor.hxx,
 include/pqxx/internal/gates/transaction-transactionfocus.hxx,
 include/pqxx/internal/result_data.hxx, include/pqxx/isolation.hxx,
 include/pqxx/largeobject.hxx, include/pqxx/notification.hxx,
 include/pqxx/notify-listen.hxx, include/pqxx/pipeline.hxx,
 include/pqxx/result.hxx, include/pqxx/robusttransaction.hxx,